# open-data-contract-standard-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/open_data_contract_standard/: model.py
tests/: test_model.py
